k8s/directory-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: directory-api
    tier: api
  name: directory-api
spec:
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 5001
  selector:
    app: directory-api
    tier: api
status:
  loadBalancer: {}
